--- a/README.adoc
+++ b/README.adoc
@@ -30,6 +30,8 @@ image::https://img.shields.io/badge/version-1.0.0-blue[]
 
 IMPORTANT: Ziel ist es, dass die von Ihnen geleistete Arbeit auch "gefunden" und korrekt bewertet wird.
 
+* 2. Aufgabe 
+
 == Aufgabe - Erstellen Sie das Basisprojekt
 
 * Erstellen Sie in diesem Repo ein Android-Projekt im Verzeichnis `todo`.
